multitenancy-benchmarks/require-quota-for-all-objects/.chainsaw-test/quota-bad.yaml
apiVersion: v1
kind: ResourceQuota
metadata:
  name: restricted-resources
  namespace: testing-ns
spec:
  hard:
    services: 5
    replicationcontrollers: 3
    resourcequotas: 1
    services.loadbalancers  : 23
    secrets: 20
    configmaps: 15
