multitenancy-benchmarks/require-quota-for-all-objects/.chainsaw-test/quota-good.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: good-ns

---

apiVersion: v1
kind: ResourceQuota
metadata:
  name: restricted-resources
  namespace: good-ns
spec:
  hard:
    persistentvolumeclaims: 5
    services.nodeports  : 23
    pods: 10
    services: 5
    replicationcontrollers: 3
    resourcequotas: 1
    services.loadbalancers  : 23
    secrets: 20
    configmaps: 15
