multitenancy-benchmarks/require-quota-for-all-objects/.chainsaw-test/chainsaw-enforce-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-quota-for-all-objects
spec:
  validationFailureAction: Enforce
