multitenancy-benchmarks/require-quota-for-all-objects/.chainsaw-test/chainsaw-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-quota-for-all-objects
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
