multitenancy-benchmarks/require-quota-for-all-objects/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: require-quota-for-all-objects
spec:
  steps:
  - name: test-disallow-capabilities
    try:
    - apply:
        file: ../require-quota-for-all-objects.yaml
    - assert:
        file: chainsaw-policy-assert.yaml
    - apply:
        file: quota-good.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: require-quota-for-all-objects
          spec:
            validationFailureAction: Enforce
    # - script:
    #     content: |
    #       sed 's/validationFailureAction: Audit/validationFailureAction: Enforce/' ../require-resource-quota.yaml | kubectl apply -f - 
    - assert:
        file: chainsaw-enforce-assert.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: quota-bad.yaml
    - delete:
        ref:
          apiVersion: v1
          kind: namespace
          name: good-ns
